[package]
name = "dlfile"
version = "0.3.0"
edition = "2021"
description = "A basic utility to download files over HTTPS"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytefmt = "0.1.7"
color-eyre = "0.6.0"
eyre = "0.6.6"
libc = "0.2.117"
reqwest = { version = "0.11.9", default-features = false, features = ["rustls-tls", "trust-dns", "gzip"] }
seccompiler = "0.2.0"
structopt = "0.3.26"
tokio = { version = "1.16.1", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.7"
